fixing the overlapping content in detailed page

--- a/frontend/src/components/recommendation/FoodDetail.css
+++ b/frontend/src/components/recommendation/FoodDetail.css
@@ -13,7 +13,7 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 24.52px;
-  text-align: center;
+  /* text-align: center; */
   width: 101px;
   height: 25px;
   top: 72px;
